--- a/index.html
+++ b/index.html
@@ -6,10 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influence Gear</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/fd130756cf.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <header>
+        <nav class="nav">
+            <div class="nav-title">
+                <h2>Influencer products</h2>
+            </div>
+            <div class="nav-right-side">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Sign up</a></li>
+                    <li><a href="">Login</a></li>
+                    <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                    <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+                </ul>
+            </div>
+        </nav>
 
+        <div class="banner">
+            <div class="banner-details">
+                <h1>Start your Journey as <br> Influencer</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros.
+                    Lectus
+                    faucibus.</p>
+                <button class="btn-primary">Preebook now <span><i class="fa-solid fa-arrow-right-long"></i></span>
+                </button>
+            </div>
+            <div class="banner-img">
+                <img src="/images/main-camera.png" alt="">
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
