banner section added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros.
                     Lectus
                     faucibus.</p>
-                <button class="btn-primary">Preebook now <span><i class="fa-solid fa-arrow-right-long"></i></span>
+                <button class="btn-primary test-btn">Preebook now <span><i
+                            class="fa-solid fa-arrow-right-long"></i></span>
                 </button>
             </div>
             <div class="banner-img">
@@ -41,6 +42,27 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="advertise">
+            <img src="logos/Alibaba.svg" alt="">
+            <img src="logos/Amazon.svg" alt="">
+            <img src="logos/Daraz.pk Logo.svg" alt="">
+            <img src="logos/Ebay.svg" alt="">
+            <img src="logos/Rakuten.svg" alt="">
+            <img src="logos/Target.svg" alt="">
+            <img src="logos/Walmart.svg" alt="">
+        </div>
+        <section>
+            <div class="popular-container">
+                <h2>Popular Section</h2>
+                <div>
+                    <img src="images/" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
+
+
 </body>
 
 </html>
