footer section added

--- a/index.html
+++ b/index.html
@@ -54,13 +54,184 @@
         </div>
         <section>
             <div class="popular-container">
-                <h2>Popular Section</h2>
                 <div>
-                    <img src="images/" alt="">
+                    <h2>Popular Section</h2>
+                    <div class="popular-img">
+                        <div class="popular-img-design">
+                            <img src="images/tripod.png" alt="">
+                            <h1>Flex Tripod</h1>
+                            <h4>$50.48</h4>
+                            <h6>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                4.99
+                            </h6>
+                            <p>Wordwide shifting <br> available <br>
+                                Buyers protection possible!</p>
+                        </div>
+                        <div class="popular-img-design">
+                            <img src="images/mic.png" alt="">
+                            <h1>Flex Tripod</h1>
+                            <h4>$50.48</h4>
+                            <h6>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                4.99
+                            </h6>
+                            <p>Wordwide shifting <br> available <br>
+                                Buyers protection possible!</p>
+                        </div>
+                        <div class="popular-img-design">
+                            <img src="images/airpod.png" alt="">
+                            <h1>Flex Tripod</h1>
+                            <h4>$50.48</h4>
+                            <h6>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                4.99
+                            </h6>
+                            <p>Wordwide shifting <br> available <br>
+                                Buyers protection possible!</p>
+                        </div>
+                        <div class="popular-img-design">
+                            <img src="images/drone.png" alt="">
+                            <h1>Flex Tripod</h1>
+                            <h4>$50.48</h4>
+                            <h6>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                4.99
+                            </h6>
+                            <p>Wordwide shifting <br> available <br>
+                                Buyers protection possible!</p>
+                        </div>
+                        <div class="popular-img-design">
+                            <img src="images/lights.png" alt="">
+                            <h1>Flex Tripod</h1>
+                            <h4>$50.48</h4>
+                            <h6>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                4.99
+                            </h6>
+                            <p>Wordwide shifting <br> available <br>
+                                Buyers protection possible!</p>
+                        </div>
+                        <div class="popular-img-design">
+                            <img src="images/setup.png" alt="">
+                            <h1>Flex Tripod</h1>
+                            <h4>$50.48</h4>
+                            <h6>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                4.99
+                            </h6>
+                            <p>Wordwide shifting <br> available <br>
+                                Buyers protection possible!</p>
+                        </div>
+                        <div class="popular-img-design">
+                            <img src="images/camera.png" alt="">
+                            <h1>Flex Tripod</h1>
+                            <h4>$50.48</h4>
+                            <h6>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                4.99
+                            </h6>
+                            <p>Wordwide shifting <br> available <br>
+                                Buyers protection possible!</p>
+                        </div>
+                        <div class="popular-img-design">
+                            <img src="images/single-light.png" alt="">
+                            <h1>Flex Tripod</h1>
+                            <h4>$50.48</h4>
+                            <h6>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                4.99
+                            </h6>
+                            <p>Wordwide shifting <br> available <br>
+                                Buyers protection possible!</p>
+                        </div>
+                        <div class="popular-img-design">
+                            <img src="images/action.png" alt="">
+                            <h1>Flex Tripod</h1>
+                            <h4>$50.48</h4>
+                            <h6>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                <span><i class="fa-regular fa-star"></i></span>
+                                4.99
+
+                            </h6>
+                            <p>Wordwide shifting <br> available <br>
+                                Buyers protection possible!</p>
+                        </div>
+
+                    </div>
+                    <span class="btn-div">
+                        <button class="btn-secondary">See More <span><i class="fa-solid fa-arrow-right-long"></i></span>
+                        </button>
+                    </span>
+
                 </div>
             </div>
         </section>
+        <div class="features">
+            <div>
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="features-details">
+                <h1>Featured products at one place</h1>
+                <p class="features-des">Amet minim mollit non deserunt ullamco est sit aliqua dolor <br> do amet sint.
+                    Velit
+                    officia
+                    consequat
+                    duis enim velit mollit. <br> Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="btn-primary">Join Now <span><i class="fa-solid fa-arrow-right-long"></i></span></button>
+            </div>
+        </div>
     </main>
+
+    <footer>
+        <div class="footer">
+            <h2>Influencer products</h2>
+            <h4>Copyright © 2020 influencer products</h4>
+            <h5>All rights reserved</h5>
+            <div>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-solid fa-globe"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
